Fix User manual and Encoding issues